--- a/basic-portfolio-solved/assets/css/style.css
+++ b/basic-portfolio-solved/assets/css/style.css
@@ -220,7 +220,7 @@ input[type=submit] {
 @media screen and (max-width:980px) {
   .main-section {
     float: left;
-    width: 75%;
+    width: 100%;
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
@@ -251,7 +251,7 @@ input[type=submit] {
 @media screen and (max-width:640px) {
   nav {
     clear: both;
-    margin: 0 auto;
+    margin-right: 3;
   }
   
   .main-section {
